--- a/Bejerholm Stenhuggeri/src/view/Panel_Søg.form
+++ b/Bejerholm Stenhuggeri/src/view/Panel_Søg.form
@@ -97,11 +97,10 @@
         <Component class="javax.swing.JComboBox" name="jComboBox_V&#xe6;lgType">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
+              <StringArray count="3">
                 <StringItem index="0" value="Ordre"/>
                 <StringItem index="1" value="Faktura"/>
-                <StringItem index="2" value="Kontoudtog"/>
-                <StringItem index="3" value="Provisionsseddel"/>
+                <StringItem index="2" value="Kunde"/>
               </StringArray>
             </Property>
           </Properties>
@@ -169,9 +168,6 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
         <Container class="javax.swing.JPanel" name="jPanel_Visfaktura">
-          <Properties>
-            <Property name="opaque" type="boolean" value="false"/>
-          </Properties>
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
         </Container>
